--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Placoso - Your Ultimate Place Solution</title>
+    <style>
+        /* Reset some default styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+        }
+
+        /* Container styles */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* Header styles */
+        header {
+            background-color: #ffffff;
+            padding: 40px 20px;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        header h1 {
+            font-size: 3em;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 1.2em;
+            color: #7f8c8d;
+        }
+
+        /* CTA Button styles */
+        .cta-button {
+            display: inline-block;
+            padding: 15px 30px;
+            margin-top: 20px;
+            background-color: #2980b9;
+            color: #fff;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #3498db;
+        }
+
+        /* Features Section */
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin: 50px 0;
+        }
+
+        .feature {
+            background-color: #fff;
+            flex: 1 1 250px;
+            margin: 15px;
+            padding: 30px 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .feature:hover {
+            transform: translateY(-10px);
+        }
+
+        .feature h3 {
+            margin-bottom: 15px;
+            color: #2c3e50;
+        }
+
+        /* Footer styles */
+        footer {
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            padding: 30px 20px;
+            text-align: center;
+        }
+
+        /* Responsive adjustments */
+        @media(max-width: 768px) {
+            header h1 {
+                font-size: 2em;
+            }
+
+            .features {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .feature {
+                width: 80%;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Header Section -->
+    <header>
+        <h1>Placoso</h1>
+        <p>Your Ultimate Place Solution</p>
+        <a href="#signup" class="cta-button">Get Started</a>
+    </header>
+
+    <!-- Features Section -->
+    <section class="container">
+        <div class="features">
+            <div class="feature">
+                <h3>Seamless Management</h3>
+                <p>Streamline your space planning and management with Placoso's intuitive tools.</p>
+            </div>
+            <div class="feature">
+                <h3>Real-time Insights</h3>
+                <p>Stay updated with live data and analytics to optimize your spaces.</p>
+            </div>
+            <div class="feature">
+                <h3>Custom Solutions</h3>
+                <p>Tailor Placoso to fit your unique needs and scale effortlessly.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Call to Action -->
+    <section class="container" id="signup" style="text-align:center; margin-top:50px;">
+        <h2>Ready to Transform Your Space?</h2>
+        <p>Join thousands who trust Placoso for efficient space management.</p>
+        <a href="#" class="cta-button">Sign Up Now</a>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Placoso. All rights reserved.</p>
+        <p>Contact us: info@placoso.com | +1 234 567 8900</p>
+    </footer>
+
+</body>
+</html>
